fixed navbar positioning issue on smaller screens, fixed language choosing and fixed few other minor bugs

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -9,8 +9,14 @@ a:hover {
   text-decoration: none;
 }
 
+li{
+  list-style-type: none;
+}
+
 p {
   font-family:"Roboto",sans-serif !important;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -54,6 +60,10 @@ h4{
   height: 250px
 }
 /* Navigation Menu */
+ul{
+  margin-bottom: 0;
+}
+
 nav {
   font-family:"Roboto",sans-serif !important;
   font-size: 21px;
@@ -69,7 +79,7 @@ div.nav-menu{
 }
 
 div.nav-menu ul{
-  margin:0;
+  margin-left:130px;
   padding: 0;
   position: absolute;
   bottom: 0;
@@ -78,10 +88,6 @@ div.nav-menu ul{
 div.nav-menu ul li{
   list-style: none;
   float: left;
-}
-
-div.nav-menu ul li:first-child{
-  margin-left: 130px;
 }
 
 div.nav-menu ul li a:link,
@@ -116,8 +122,15 @@ div.nav-menu #header-logo{
   margin: 0 -15px;
   display: none;
 }
+.flag{
+  float: right;
+}
+.dropdown-menu-position {
+  right: 0;
+  left: auto;
+}
 
-@media screen and (max-width: 740px){
+@media screen and (max-width: 550px){
   .menu-trigger{
     display: block;
     color: white;
@@ -142,6 +155,7 @@ div.nav-menu #header-logo{
   }
 
   div.nav-menu ul{
+    margin-left: 0;
     text-align: left;
     position: relative;
   }
@@ -168,6 +182,16 @@ div.nav-menu #header-logo{
     padding: 3px;
     margin-top: 0;
     margin-right: 0;
+  }
+
+  .flag{
+    padding-top: 10px;
+    float: left;
+  }
+
+  .dropdown-menu-position {
+    right: auto;
+    left: 0;
   }
 }
 
